--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
+    "@sanity/client": "^7.13.0",
+    "@sanity/image-url": "^1.2.0",
+    "@sanity/vision": "^4.18.0",
     "@shadcn/ui": "^0.0.4",
     "@tanstack/react-query": "^5.90.7",
     "@tanstack/react-query-devtools": "^5.90.2",
@@ -32,12 +35,15 @@
     "lucide-react": "^0.553.0",
     "next": "16.0.1",
     "next-auth": "^4.24.13",
+    "next-sanity": "^11.6.9",
     "next-themes": "^0.4.6",
     "openai": "^6.9.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.0",
+    "sanity": "^4.18.0",
     "sonner": "^2.0.7",
+    "styled-components": "^6.1.19",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.1.12"
   },
