--- a/package.json
+++ b/package.json
@@ -40,9 +40,9 @@
     "cmdk": "^1.1.1",
     "filesize": "^11.0.13",
     "lucide-react": "^0.553.0",
-    "next": "16.0.1",
+    "next": "^16.0.7",
     "next-auth": "^4.24.13",
-    "next-sanity": "^11.6.9",
+    "next-sanity": "^9.12.0",
     "next-themes": "^0.4.6",
     "openai": "^6.9.1",
     "react": "19.2.0",
@@ -50,7 +50,7 @@
     "react-hook-form": "^7.66.0",
     "react-is": "^19.2.0",
     "recharts": "^3.5.1",
-    "sanity": "^4.18.0",
+    "sanity": "^3.95.0",
     "sonner": "^2.0.7",
     "styled-components": "^6.1.19",
     "tailwind-merge": "^3.4.0",
