--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
-    "@sanity/client": "^7.13.0",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@sanity/client": "^7.13.1",
     "@sanity/image-url": "^1.2.0",
     "@sanity/vision": "^4.18.0",
     "@shadcn/ui": "^0.0.4",
@@ -42,7 +43,7 @@
     "lucide-react": "^0.553.0",
     "next": "^16.0.7",
     "next-auth": "^4.24.13",
-    "next-sanity": "^9.12.0",
+    "next-sanity": "^11.6.10",
     "next-themes": "^0.4.6",
     "openai": "^6.9.1",
     "react": "19.2.0",
@@ -50,7 +51,8 @@
     "react-hook-form": "^7.66.0",
     "react-is": "^19.2.0",
     "recharts": "^3.5.1",
-    "sanity": "^3.95.0",
+    "sanity": "^4.21.0",
+    "shadcn": "^3.5.2",
     "sonner": "^2.0.7",
     "styled-components": "^6.1.19",
     "tailwind-merge": "^3.4.0",
